# claude-light

./: .gitignore  claude.service  exercises.org  gm-bg.jsonl  gm-bg.py  gm.jsonl  gm.py  pyproject.toml  readme.org  restart.sh  setup-service.sh  stop.sh  update-pi.sh
.github/workflows/: benchmark.yaml  online.yaml
claude/: app.py  cl_light.py
claude/templates/: about.html  green-machine1.html  rgb.html  session.html
